// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RolloutOptions Component renders correctly 1`] = `
.emotion-0 {
  min-height: 300px;
  overflow: visible;
}

.emotion-1 {
  margin-bottom: 0;
}

.emotion-2 {
  min-width: 88px;
}

.emotion-3 {
  max-width: 100%;
  font-family: Lato,sans-serif;
  font-size: 0.7545rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  color: rgba(10, 10, 11, 0.78);
  background-color: rgba(0, 0, 0, 0.08);
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: default;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  background-color: transparent;
  border: 1px solid #f7f7f7;
}

.emotion-3.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-3 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #bcbcbc;
  font-size: 0.6964rem;
}

.emotion-3 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: rgb(35, 85, 94);
}

.emotion-3 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: rgb(65, 10, 46);
}

.emotion-3 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.5804rem;
}

.emotion-3 .MuiChip-icon {
  color: #bcbcbc;
  margin-left: 5px;
  margin-right: -6px;
}

.emotion-3 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(10, 10, 11, 0.26);
  font-size: 22px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
}

.emotion-3 .MuiChip-deleteIcon:hover {
  color: rgba(10, 10, 11, 0.4);
}

.emotion-3.MuiChip-clickable:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

.emotion-3.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-3 .MuiChip-avatar {
  margin-left: 4px;
}

.emotion-3 .MuiChip-avatarSmall {
  margin-left: 2px;
}

.emotion-3 .MuiChip-icon {
  margin-left: 4px;
}

.emotion-3 .MuiChip-iconSmall {
  margin-left: 2px;
}

.emotion-3 .MuiChip-deleteIcon {
  margin-right: 5px;
}

.emotion-3 .MuiChip-deleteIconSmall {
  margin-right: 3px;
}

.emotion-4 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 12px;
  padding-right: 12px;
  white-space: nowrap;
}

.emotion-5 {
  min-width: 80px;
}

.emotion-6 {
  height: 32px;
  padding-left: 8px;
  width: 100%;
}

.emotion-7 {
  background-color: rgba(0, 0, 0, 0.54);
  height: 3px;
  width: 100%;
  margin-right: -8px;
}

.emotion-7 svg {
  color: rgba(0, 0, 0, 0.54);
}

.emotion-8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
}

.emotion-8 iconButton {
  margin-right: 8px;
}

.emotion-9 {
  border-left: #e9e9e9 dashed 1px;
  height: 48px;
  margin: 4px;
  margin-top: -10px;
}

.emotion-10 {
  margin-left: -24px;
  margin-right: -24px;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  max-width: 100%;
  font-family: Lato,sans-serif;
  font-size: 0.7545rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  color: #fff;
  background-color: #337a87;
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: default;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
  cursor: pointer;
}

.emotion-11::-moz-focus-inner {
  border-style: none;
}

.emotion-11.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-11 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-11.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-11 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #bcbcbc;
  font-size: 0.6964rem;
}

.emotion-11 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: rgb(35, 85, 94);
}

.emotion-11 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: rgb(65, 10, 46);
}

.emotion-11 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.5804rem;
}

.emotion-11 .MuiChip-icon {
  color: inherit;
  margin-left: 5px;
  margin-right: -6px;
}

.emotion-11 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(255, 255, 255, 0.7);
  font-size: 22px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
}

.emotion-11 .MuiChip-deleteIcon:hover {
  color: rgba(10, 10, 11, 0.4);
}

.emotion-11 .MuiChip-deleteIcon:hover,
.emotion-11 .MuiChip-deleteIcon:active {
  color: #fff;
}

.emotion-11:hover {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-11.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.2);
}

.emotion-11:active {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
}

.emotion-11:hover,
.emotion-11.Mui-focusVisible {
  background-color: rgb(35, 85, 94);
}

.emotion-12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-12 iconButton {
  margin-right: 8px;
}

.emotion-14 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-44 {
  color: rgba(0, 0, 0, 0.38);
  margin: 15px 0;
}

.emotion-46 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
  margin-top: 18px;
  min-width: 240px;
}

.emotion-47 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-48 {
  max-width: 150px;
  min-width: 130px;
}

.emotion-49.Mui-focused .MuiAutocomplete-clearIndicator {
  visibility: visible;
}

@media (pointer: fine) {
  .emotion-49:hover .MuiAutocomplete-clearIndicator {
    visibility: visible;
  }
}

.emotion-49 .MuiAutocomplete-tag {
  margin: 3px;
  max-width: calc(100% - 6px);
}

.emotion-49 .MuiAutocomplete-inputRoot {
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.MuiAutocomplete-hasPopupIcon.emotion-49 .MuiAutocomplete-inputRoot,
.MuiAutocomplete-hasClearIcon.emotion-49 .MuiAutocomplete-inputRoot {
  padding-right: 30px;
}

.MuiAutocomplete-hasPopupIcon.MuiAutocomplete-hasClearIcon.emotion-49 .MuiAutocomplete-inputRoot {
  padding-right: 56px;
}

.emotion-49 .MuiAutocomplete-inputRoot .MuiAutocomplete-input {
  width: 0;
  min-width: 30px;
}

.emotion-49 .MuiInput-root {
  padding-bottom: 1px;
}

.emotion-49 .MuiInput-root .MuiInput-input {
  padding: 4px 4px 4px 0px;
}

.emotion-49 .MuiInput-root.MuiInputBase-sizeSmall .MuiInput-input {
  padding: 2px 4px 3px 0;
}

.emotion-49 .MuiOutlinedInput-root {
  padding: 9px;
}

.MuiAutocomplete-hasPopupIcon.emotion-49 .MuiOutlinedInput-root,
.MuiAutocomplete-hasClearIcon.emotion-49 .MuiOutlinedInput-root {
  padding-right: 39px;
}

.MuiAutocomplete-hasPopupIcon.MuiAutocomplete-hasClearIcon.emotion-49 .MuiOutlinedInput-root {
  padding-right: 65px;
}

.emotion-49 .MuiOutlinedInput-root .MuiAutocomplete-input {
  padding: 7.5px 4px 7.5px 6px;
}

.emotion-49 .MuiOutlinedInput-root .MuiAutocomplete-endAdornment {
  right: 9px;
}

.emotion-49 .MuiOutlinedInput-root.MuiInputBase-sizeSmall {
  padding: 6px;
}

.emotion-49 .MuiOutlinedInput-root.MuiInputBase-sizeSmall .MuiAutocomplete-input {
  padding: 2.5px 4px 2.5px 6px;
}

.emotion-49 .MuiFilledInput-root {
  padding-top: 19px;
  padding-left: 8px;
}

.MuiAutocomplete-hasPopupIcon.emotion-49 .MuiFilledInput-root,
.MuiAutocomplete-hasClearIcon.emotion-49 .MuiFilledInput-root {
  padding-right: 39px;
}

.MuiAutocomplete-hasPopupIcon.MuiAutocomplete-hasClearIcon.emotion-49 .MuiFilledInput-root {
  padding-right: 65px;
}

.emotion-49 .MuiFilledInput-root .MuiFilledInput-input {
  padding: 7px 4px;
}

.emotion-49 .MuiFilledInput-root .MuiAutocomplete-endAdornment {
  right: 9px;
}

.emotion-49 .MuiFilledInput-root.MuiInputBase-sizeSmall {
  padding-bottom: 1px;
}

.emotion-49 .MuiFilledInput-root.MuiInputBase-sizeSmall .MuiFilledInput-input {
  padding: 2.5px 4px;
}

.emotion-49 .MuiInputBase-hiddenLabel {
  padding-top: 8px;
}

.emotion-49 .MuiAutocomplete-input {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-overflow: ellipsis;
  opacity: 1;
}

.emotion-51 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
  width: 100%;
  margin-top: 18px;
  min-width: 240px;
}

.emotion-52 {
  line-height: 1.4375em;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.9286rem;
  color: rgba(10, 10, 11, 0.78);
  box-sizing: border-box;
  position: relative;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  position: relative;
}

.emotion-52.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
  cursor: default;
}

label+.emotion-52 {
  margin-top: 16px;
}

.emotion-52:after {
  border-bottom: 2px solid #337a87;
  left: 0;
  bottom: 0;
  content: "";
  position: absolute;
  right: 0;
  -webkit-transform: scaleX(0);
  -moz-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  pointer-events: none;
}

.emotion-52.Mui-focused:after {
  -webkit-transform: scaleX(1) translateX(0);
  -moz-transform: scaleX(1) translateX(0);
  -ms-transform: scaleX(1) translateX(0);
  transform: scaleX(1) translateX(0);
}

.emotion-52.Mui-error:after {
  border-bottom-color: #ab1000;
  -webkit-transform: scaleX(1);
  -moz-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

.emotion-52:before {
  border-bottom: 1px solid rgba(0, 0, 0, 0.42);
  left: 0;
  bottom: 0;
  content: "\\00a0";
  position: absolute;
  right: 0;
  -webkit-transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  pointer-events: none;
}

.emotion-52:hover:not(.Mui-disabled):before {
  border-bottom: 2px solid rgba(10, 10, 11, 0.78);
}

@media (hover: none) {
  .emotion-52:hover:not(.Mui-disabled):before {
    border-bottom: 1px solid rgba(0, 0, 0, 0.42);
  }
}

.emotion-52.Mui-disabled:before {
  border-bottom-style: dotted;
}

.emotion-52:before {
  border-bottom: 1px solid rgb(224, 224, 224);
}

.emotion-52:hover:not($disabled):before {
  border-bottom: 2px solid #337a87!important;
}

.emotion-52:after {
  border-bottom: 2px solid #337a87;
}

.emotion-53 {
  font: inherit;
  letter-spacing: inherit;
  color: currentColor;
  padding: 4px 0 5px;
  border: 0;
  box-sizing: content-box;
  background: none;
  height: 1.4375em;
  margin: 0;
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0;
  width: 100%;
  -webkit-animation-name: mui-auto-fill-cancel;
  animation-name: mui-auto-fill-cancel;
  -webkit-animation-duration: 10ms;
  animation-duration: 10ms;
}

.emotion-53::-webkit-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-53::-moz-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-53:-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-53::-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-53:focus {
  outline: 0;
}

.emotion-53:invalid {
  box-shadow: none;
}

.emotion-53::-webkit-search-decoration {
  -webkit-appearance: none;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-53::-webkit-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-53::-moz-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-53:-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-53::-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-53:focus::-webkit-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-53:focus::-moz-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-53:focus:-ms-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-53:focus::-ms-input-placeholder {
  opacity: 0.42;
}

.emotion-53.Mui-disabled {
  opacity: 1;
  -webkit-text-fill-color: rgba(0, 0, 0, 0.38);
}

.emotion-53:-webkit-autofill {
  -webkit-animation-duration: 5000s;
  animation-duration: 5000s;
  -webkit-animation-name: mui-auto-fill;
  animation-name: mui-auto-fill;
}

.emotion-54 {
  margin-top: 0;
  margin-bottom: -15px;
}

.emotion-55 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  margin-left: -11px;
  margin-right: 16px;
  margin-top: 18px;
}

.emotion-55.Mui-disabled {
  cursor: default;
}

.emotion-55 .MuiFormControlLabel-label.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-56 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  padding: 9px;
  border-radius: 50%;
  color: rgba(0, 0, 0, 0.54);
  color: rgba(10, 10, 11, 0.78);
}

.emotion-56::-moz-focus-inner {
  border-style: none;
}

.emotion-56.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-56 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-56:hover {
  background-color: rgba(51, 122, 135, 0.04);
}

@media (hover: none) {
  .emotion-56:hover {
    background-color: transparent;
  }
}

.emotion-56.Mui-checked,
.emotion-56.MuiCheckbox-indeterminate {
  color: #337a87;
}

.emotion-56.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-57 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  padding: 0;
  z-index: 1;
}

.emotion-60 {
  margin: 0;
  line-height: 1.5;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.9286rem;
}

<div>
  <form
    class="flexbox column margin margin-top-none emotion-0"
  >
    <h4
      class="emotion-1"
    >
      Add pauses between update steps
    </h4>
    <div
      class=""
    >
      <div
        class=""
      >
        <div
          class="flexbox margin-top margin-left-large margin-right-large"
        >
          <div
            aria-label="The Artifact is downloaded (streamed) to the inactive partition."
            class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault emotion-2 emotion-3"
            data-mui-internal-clone-element="true"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium emotion-4"
            >
              Download
            </span>
          </div>
          <div
            class="flexbox column center-aligned emotion-5"
          >
            <div
              class="flexbox centered emotion-6"
            >
              <div
                class="emotion-7"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-8"
                data-testid="ArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m10 17 5-5-5-5v10z"
                />
              </svg>
            </div>
            <div
              class="emotion-9"
            />
            <div
              class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-clickable MuiChip-clickableColorPrimary MuiChip-filledPrimary emotion-10 emotion-11"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconMedium MuiChip-iconColorPrimary emotion-12"
                data-testid="AddIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                />
              </svg>
              <span
                class="MuiChip-label MuiChip-labelMedium emotion-4"
              >
                Add a pause
              </span>
              <span
                class="MuiTouchRipple-root emotion-14"
              />
            </div>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault emotion-2 emotion-3"
            data-mui-internal-clone-element="true"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium emotion-4"
            >
              Install
            </span>
          </div>
          <div
            class="flexbox column center-aligned emotion-5"
          >
            <div
              class="flexbox centered emotion-6"
            >
              <div
                class="emotion-7"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-8"
                data-testid="ArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m10 17 5-5-5-5v10z"
                />
              </svg>
            </div>
            <div
              class="emotion-9"
            />
            <div
              class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-clickable MuiChip-clickableColorPrimary MuiChip-filledPrimary emotion-10 emotion-11"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconMedium MuiChip-iconColorPrimary emotion-12"
                data-testid="AddIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                />
              </svg>
              <span
                class="MuiChip-label MuiChip-labelMedium emotion-4"
              >
                Add a pause
              </span>
              <span
                class="MuiTouchRipple-root emotion-14"
              />
            </div>
          </div>
          <div
            aria-label="The device will reboot and the installed update will be active when the device boots up again. As changes are not yet committed, the update is not persistent and the device will still roll back again on the next reboot."
            class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault emotion-2 emotion-3"
            data-mui-internal-clone-element="true"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium emotion-4"
            >
              Reboot
            </span>
          </div>
          <div
            class="flexbox column center-aligned emotion-5"
          >
            <div
              class="flexbox centered emotion-6"
            >
              <div
                class="emotion-7"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-8"
                data-testid="ArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m10 17 5-5-5-5v10z"
                />
              </svg>
            </div>
            <div
              class="emotion-9"
            />
            <div
              class="MuiButtonBase-root MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-clickable MuiChip-clickableColorPrimary MuiChip-filledPrimary emotion-10 emotion-11"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconMedium MuiChip-iconColorPrimary emotion-12"
                data-testid="AddIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                />
              </svg>
              <span
                class="MuiChip-label MuiChip-labelMedium emotion-4"
              >
                Add a pause
              </span>
              <span
                class="MuiTouchRipple-root emotion-14"
              />
            </div>
          </div>
          <div
            aria-label="If the update passes integrity checks, Mender will mark the update as successful and continue running from this partition. The commit makes the update persistent."
            class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault emotion-2 emotion-3"
            data-mui-internal-clone-element="true"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium emotion-4"
            >
              Commit
            </span>
          </div>
        </div>
        <p
          class="emotion-44 "
        >
          A 'pause' means each device will pause its update after completing the previous step, and wait for approval before continuing. You can grant approval by clicking "continue" in the deployment progress UI.
           
          <a
            href="https://docs.mender.io/undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
          </a>
        </p>
      </div>
    </div>
    <h4
      class="emotion-1"
    >
      Select the number of times each device will attempt to apply the update
    </h4>
    <div
      class="MuiFormControl-root margin-bottom emotion-46"
    >
      <div
        class="MuiFormGroup-root MuiFormGroup-row emotion-47"
      >
        <div
          class="MuiAutocomplete-root margin-right emotion-48 emotion-49"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-48 emotion-51"
          >
            <div
              class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiAutocomplete-inputRoot emotion-52"
            >
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                aria-invalid="false"
                autocapitalize="none"
                autocomplete="off"
                class="MuiInput-input MuiInputBase-input MuiAutocomplete-input MuiAutocomplete-inputFocused emotion-53"
                id="deployment-retries-selection"
                placeholder="Don't retry"
                role="combobox"
                spellcheck="false"
                type="number"
                value=""
              />
            </div>
          </div>
        </div>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-54 emotion-55"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-56"
          >
            <input
              class="PrivateSwitchBase-input emotion-57"
              data-indeterminate="false"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-12"
              data-testid="CheckBoxOutlineBlankIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root emotion-14"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-60"
          >
            Save as default
          </span>
        </label>
      </div>
    </div>
  </form>
</div>
`;

exports[`RolloutOptions Component renders correctly when enterprise is false 1`] = `
.emotion-0 {
  min-height: 300px;
  overflow: visible;
}

.emotion-1 {
  margin-bottom: 0;
}

.emotion-2 {
  min-width: 88px;
}

.emotion-3 {
  max-width: 100%;
  font-family: Lato,sans-serif;
  font-size: 0.7545rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  color: rgba(10, 10, 11, 0.78);
  background-color: rgba(0, 0, 0, 0.08);
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: default;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  background-color: transparent;
  border: 1px solid #f7f7f7;
}

.emotion-3.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-3 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #bcbcbc;
  font-size: 0.6964rem;
}

.emotion-3 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: rgb(35, 85, 94);
}

.emotion-3 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: rgb(65, 10, 46);
}

.emotion-3 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.5804rem;
}

.emotion-3 .MuiChip-icon {
  color: #bcbcbc;
  margin-left: 5px;
  margin-right: -6px;
}

.emotion-3 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(10, 10, 11, 0.26);
  font-size: 22px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
}

.emotion-3 .MuiChip-deleteIcon:hover {
  color: rgba(10, 10, 11, 0.4);
}

.emotion-3.MuiChip-clickable:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

.emotion-3.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-3 .MuiChip-avatar {
  margin-left: 4px;
}

.emotion-3 .MuiChip-avatarSmall {
  margin-left: 2px;
}

.emotion-3 .MuiChip-icon {
  margin-left: 4px;
}

.emotion-3 .MuiChip-iconSmall {
  margin-left: 2px;
}

.emotion-3 .MuiChip-deleteIcon {
  margin-right: 5px;
}

.emotion-3 .MuiChip-deleteIconSmall {
  margin-right: 3px;
}

.emotion-4 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 12px;
  padding-right: 12px;
  white-space: nowrap;
}

.emotion-5 {
  min-width: 80px;
}

.emotion-6 {
  height: 32px;
  padding-left: 8px;
  width: 100%;
}

.emotion-7 {
  background-color: rgba(0, 0, 0, 0.54);
  height: 3px;
  width: 100%;
  margin-right: -8px;
}

.emotion-7 svg {
  color: rgba(0, 0, 0, 0.54);
}

.emotion-8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
}

.emotion-8 iconButton {
  margin-right: 8px;
}

.emotion-26 {
  color: rgba(0, 0, 0, 0.38);
  margin: 15px 0;
}

.emotion-27 {
  gap: 8px;
}

.emotion-30 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
  margin-top: 18px;
  min-width: 240px;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-32 {
  max-width: 150px;
  min-width: 130px;
}

.emotion-33.Mui-focused .MuiAutocomplete-clearIndicator {
  visibility: visible;
}

@media (pointer: fine) {
  .emotion-33:hover .MuiAutocomplete-clearIndicator {
    visibility: visible;
  }
}

.emotion-33 .MuiAutocomplete-tag {
  margin: 3px;
  max-width: calc(100% - 6px);
}

.emotion-33 .MuiAutocomplete-inputRoot {
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.MuiAutocomplete-hasPopupIcon.emotion-33 .MuiAutocomplete-inputRoot,
.MuiAutocomplete-hasClearIcon.emotion-33 .MuiAutocomplete-inputRoot {
  padding-right: 30px;
}

.MuiAutocomplete-hasPopupIcon.MuiAutocomplete-hasClearIcon.emotion-33 .MuiAutocomplete-inputRoot {
  padding-right: 56px;
}

.emotion-33 .MuiAutocomplete-inputRoot .MuiAutocomplete-input {
  width: 0;
  min-width: 30px;
}

.emotion-33 .MuiInput-root {
  padding-bottom: 1px;
}

.emotion-33 .MuiInput-root .MuiInput-input {
  padding: 4px 4px 4px 0px;
}

.emotion-33 .MuiInput-root.MuiInputBase-sizeSmall .MuiInput-input {
  padding: 2px 4px 3px 0;
}

.emotion-33 .MuiOutlinedInput-root {
  padding: 9px;
}

.MuiAutocomplete-hasPopupIcon.emotion-33 .MuiOutlinedInput-root,
.MuiAutocomplete-hasClearIcon.emotion-33 .MuiOutlinedInput-root {
  padding-right: 39px;
}

.MuiAutocomplete-hasPopupIcon.MuiAutocomplete-hasClearIcon.emotion-33 .MuiOutlinedInput-root {
  padding-right: 65px;
}

.emotion-33 .MuiOutlinedInput-root .MuiAutocomplete-input {
  padding: 7.5px 4px 7.5px 6px;
}

.emotion-33 .MuiOutlinedInput-root .MuiAutocomplete-endAdornment {
  right: 9px;
}

.emotion-33 .MuiOutlinedInput-root.MuiInputBase-sizeSmall {
  padding: 6px;
}

.emotion-33 .MuiOutlinedInput-root.MuiInputBase-sizeSmall .MuiAutocomplete-input {
  padding: 2.5px 4px 2.5px 6px;
}

.emotion-33 .MuiFilledInput-root {
  padding-top: 19px;
  padding-left: 8px;
}

.MuiAutocomplete-hasPopupIcon.emotion-33 .MuiFilledInput-root,
.MuiAutocomplete-hasClearIcon.emotion-33 .MuiFilledInput-root {
  padding-right: 39px;
}

.MuiAutocomplete-hasPopupIcon.MuiAutocomplete-hasClearIcon.emotion-33 .MuiFilledInput-root {
  padding-right: 65px;
}

.emotion-33 .MuiFilledInput-root .MuiFilledInput-input {
  padding: 7px 4px;
}

.emotion-33 .MuiFilledInput-root .MuiAutocomplete-endAdornment {
  right: 9px;
}

.emotion-33 .MuiFilledInput-root.MuiInputBase-sizeSmall {
  padding-bottom: 1px;
}

.emotion-33 .MuiFilledInput-root.MuiInputBase-sizeSmall .MuiFilledInput-input {
  padding: 2.5px 4px;
}

.emotion-33 .MuiInputBase-hiddenLabel {
  padding-top: 8px;
}

.emotion-33 .MuiAutocomplete-input {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-overflow: ellipsis;
  opacity: 1;
}

.emotion-35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
  width: 100%;
  margin-top: 18px;
  min-width: 240px;
}

.emotion-36 {
  line-height: 1.4375em;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.9286rem;
  color: rgba(10, 10, 11, 0.78);
  box-sizing: border-box;
  position: relative;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  position: relative;
}

.emotion-36.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
  cursor: default;
}

label+.emotion-36 {
  margin-top: 16px;
}

.emotion-36:after {
  border-bottom: 2px solid #337a87;
  left: 0;
  bottom: 0;
  content: "";
  position: absolute;
  right: 0;
  -webkit-transform: scaleX(0);
  -moz-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  pointer-events: none;
}

.emotion-36.Mui-focused:after {
  -webkit-transform: scaleX(1) translateX(0);
  -moz-transform: scaleX(1) translateX(0);
  -ms-transform: scaleX(1) translateX(0);
  transform: scaleX(1) translateX(0);
}

.emotion-36.Mui-error:after {
  border-bottom-color: #ab1000;
  -webkit-transform: scaleX(1);
  -moz-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

.emotion-36:before {
  border-bottom: 1px solid rgba(0, 0, 0, 0.42);
  left: 0;
  bottom: 0;
  content: "\\00a0";
  position: absolute;
  right: 0;
  -webkit-transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  pointer-events: none;
}

.emotion-36:hover:not(.Mui-disabled):before {
  border-bottom: 2px solid rgba(10, 10, 11, 0.78);
}

@media (hover: none) {
  .emotion-36:hover:not(.Mui-disabled):before {
    border-bottom: 1px solid rgba(0, 0, 0, 0.42);
  }
}

.emotion-36.Mui-disabled:before {
  border-bottom-style: dotted;
}

.emotion-36:before {
  border-bottom: 1px solid rgb(224, 224, 224);
}

.emotion-36:hover:not($disabled):before {
  border-bottom: 2px solid #337a87!important;
}

.emotion-36:after {
  border-bottom: 2px solid #337a87;
}

.emotion-37 {
  font: inherit;
  letter-spacing: inherit;
  color: currentColor;
  padding: 4px 0 5px;
  border: 0;
  box-sizing: content-box;
  background: none;
  height: 1.4375em;
  margin: 0;
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0;
  width: 100%;
  -webkit-animation-name: mui-auto-fill-cancel;
  animation-name: mui-auto-fill-cancel;
  -webkit-animation-duration: 10ms;
  animation-duration: 10ms;
}

.emotion-37::-webkit-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-37::-moz-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-37:-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-37::-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-37:focus {
  outline: 0;
}

.emotion-37:invalid {
  box-shadow: none;
}

.emotion-37::-webkit-search-decoration {
  -webkit-appearance: none;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-37::-webkit-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-37::-moz-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-37:-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-37::-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-37:focus::-webkit-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-37:focus::-moz-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-37:focus:-ms-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-37:focus::-ms-input-placeholder {
  opacity: 0.42;
}

.emotion-37.Mui-disabled {
  opacity: 1;
  -webkit-text-fill-color: rgba(0, 0, 0, 0.38);
}

.emotion-37:-webkit-autofill {
  -webkit-animation-duration: 5000s;
  animation-duration: 5000s;
  -webkit-animation-name: mui-auto-fill;
  animation-name: mui-auto-fill;
}

.emotion-38 {
  margin-top: 0;
  margin-bottom: -15px;
}

.emotion-39 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  margin-left: -11px;
  margin-right: 16px;
  margin-top: 18px;
}

.emotion-39.Mui-disabled {
  cursor: default;
}

.emotion-39 .MuiFormControlLabel-label.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-40 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  padding: 9px;
  border-radius: 50%;
  color: rgba(0, 0, 0, 0.54);
  color: rgba(10, 10, 11, 0.78);
}

.emotion-40::-moz-focus-inner {
  border-style: none;
}

.emotion-40.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-40 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-40:hover {
  background-color: rgba(51, 122, 135, 0.04);
}

@media (hover: none) {
  .emotion-40:hover {
    background-color: transparent;
  }
}

.emotion-40.Mui-checked,
.emotion-40.MuiCheckbox-indeterminate {
  color: #337a87;
}

.emotion-40.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-41 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  padding: 0;
  z-index: 1;
}

.emotion-42 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-42 iconButton {
  margin-right: 8px;
}

.emotion-43 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-44 {
  margin: 0;
  line-height: 1.5;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.9286rem;
}

<div>
  <form
    class="flexbox column margin margin-top-none emotion-0"
  >
    <h4
      class="emotion-1"
    >
      Add pauses between update steps
    </h4>
    <div
      class=""
    >
      <div
        class="muted"
      >
        <div
          class="flexbox margin-top margin-left-large margin-right-large"
        >
          <div
            aria-label="The Artifact is downloaded (streamed) to the inactive partition."
            class="MuiChip-root MuiChip-outlined Mui-disabled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault emotion-2 emotion-3"
            data-mui-internal-clone-element="true"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium emotion-4"
            >
              Download
            </span>
          </div>
          <div
            class="flexbox column center-aligned emotion-5"
          >
            <div
              class="flexbox centered emotion-6"
            >
              <div
                class="emotion-7"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-8"
                data-testid="ArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m10 17 5-5-5-5v10z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined Mui-disabled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault emotion-2 emotion-3"
            data-mui-internal-clone-element="true"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium emotion-4"
            >
              Install
            </span>
          </div>
          <div
            class="flexbox column center-aligned emotion-5"
          >
            <div
              class="flexbox centered emotion-6"
            >
              <div
                class="emotion-7"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-8"
                data-testid="ArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m10 17 5-5-5-5v10z"
                />
              </svg>
            </div>
          </div>
          <div
            aria-label="The device will reboot and the installed update will be active when the device boots up again. As changes are not yet committed, the update is not persistent and the device will still roll back again on the next reboot."
            class="MuiChip-root MuiChip-outlined Mui-disabled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault emotion-2 emotion-3"
            data-mui-internal-clone-element="true"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium emotion-4"
            >
              Reboot
            </span>
          </div>
          <div
            class="flexbox column center-aligned emotion-5"
          >
            <div
              class="flexbox centered emotion-6"
            >
              <div
                class="emotion-7"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-8"
                data-testid="ArrowRightIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="m10 17 5-5-5-5v10z"
                />
              </svg>
            </div>
          </div>
          <div
            aria-label="If the update passes integrity checks, Mender will mark the update as successful and continue running from this partition. The commit makes the update persistent."
            class="MuiChip-root MuiChip-outlined Mui-disabled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault emotion-2 emotion-3"
            data-mui-internal-clone-element="true"
          >
            <span
              class="MuiChip-label MuiChip-labelMedium emotion-4"
            >
              Commit
            </span>
          </div>
        </div>
      </div>
      <p
        class="emotion-26 icon flexbox center-aligned emotion-27 "
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-8"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
          />
        </svg>
        With a more advanced commercial Mender plan you get access to granular control about update rollout to allow synchronization across your fleet. Get an overview of the Mender plans on the 
        <a
          href="https://mender.io/plans/features"
          rel="noopener noreferrer"
          target="_blank"
        >
          features page
        </a>
        .
      </p>
    </div>
    <h4
      class="emotion-1"
    >
      Select the number of times each device will attempt to apply the update
    </h4>
    <div
      class="MuiFormControl-root margin-bottom emotion-30"
    >
      <div
        class="MuiFormGroup-root MuiFormGroup-row emotion-31"
      >
        <div
          class="MuiAutocomplete-root margin-right emotion-32 emotion-33"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root emotion-32 emotion-35"
          >
            <div
              class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiAutocomplete-inputRoot emotion-36"
            >
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                aria-invalid="false"
                autocapitalize="none"
                autocomplete="off"
                class="MuiInput-input MuiInputBase-input MuiAutocomplete-input MuiAutocomplete-inputFocused emotion-37"
                id="deployment-retries-selection"
                placeholder="Don't retry"
                role="combobox"
                spellcheck="false"
                type="number"
                value=""
              />
            </div>
          </div>
        </div>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-38 emotion-39"
        >
          <span
            class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root emotion-40"
          >
            <input
              class="PrivateSwitchBase-input emotion-41"
              data-indeterminate="false"
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-42"
              data-testid="CheckBoxOutlineBlankIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root emotion-43"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-44"
          >
            Save as default
          </span>
        </label>
      </div>
    </div>
  </form>
</div>
`;
